[package]
name = "rust_bam_tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "*"
csv = "*"
failure = "*"
clap = "*"
log = "*"
tempfile = "*"
rayon = "*"
simplelog = "*"
ctrlc = "*"


[lib]
name = "rust_bam_tools"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "*"
features = ["extension-module"]